# ml_bootcamp-final-project

./: ML_processes.drawio  README.md  Untitled Diagram.drawio  analyzer.py  hyperparams.json  main.py  pyproject.toml
ml_framework/: analyzer.py  classifier.py  clustering.py  main.py  regressor.py
ml_framework/utils/: utils.py
tests/: test_analyzer.py
