[project]
name = "ma-framework"
version = "0.1.0"
description = "Framework for ML analysis"
authors = [
    {name = "koa-inn",email = "koainn@gmail.com"}
]
license = {text = "GNU General Public License V2"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
black = "^25.1.0"
mypy = "^1.15.0"

